# LiteDo

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
.trae/rules/: encoding-rules.md  interaction-rules.md
docs/: ARCHITECTURE.md  SCRIPTS.md  vue-architecture.md
scripts/: README.md  bump-version.js  clean-before-release.js  deep-clean.js
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  debug_log.rs  lib.rs  main.rs  operation_log.rs  system_log.rs
src/components/: AIDialog.vue  AddTodo.vue  Calendar.vue  ConfirmDialog.vue  FilterBar.vue  FilterTabs.vue  Icon.vue  Loading.vue  Modal.vue  OperationLogViewer.vue  PrioritySelector.vue  SettingsPanel.vue  TaskInput.vue  Toast.vue  TodoItem.vue
src/components/common/: BaseButton.vue  BaseOverlay.vue  PriorityBadge.vue
src/composables/: index.ts  useSettings.ts  useTheme.ts
src/constants/: model.ts
src/services/: api.ts  openaiApi.ts
src/stores/: modelStore.ts  todoStore.ts
src/styles/: main.css
src/types/: export.ts  global.d.ts  model.ts  todo.ts
src/utils/: crypto.ts  dataExport.ts  dataImport.ts  dateUtils.ts  debugLogger.ts  loading.ts  logger.ts  operationLogger.ts  priority.ts  systemLogger.ts  toast.ts
